--- a/index.html
+++ b/index.html
@@ -50,29 +50,29 @@ function MM_swapImage() { //v3.0
 </div>
 <div class="container">
 <div id="sidebar">
-<ul data-role="listview" data-theme="a" class="ui-listview ui-listview-theme-a">
+<ul data-role="listview" data-theme="a" class="ui-listview ui-group-theme-a">
 <li class="ui-first-child ui-last-child">
-<a href="#Pagina1" class="ui-btn-icon-right ui-icon-carat-r">
+<a href="#Pagina1" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
 <h2>¿Porqué se celebra?</h2>
 </a>
 </li>
 <li class="ui-first-child ui-last-child">
-<a href="#Pagina2" class="ui-btn-icon-right ui-icon-carat-r">
+<a href="#Pagina2" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
 <h2>Historia del dia</h2>
 </a>
 </li>
 <li class="ui-first-child ui-last-child">
-<a href="#Pagina3" class="ui-btn-icon-right ui-icon-carat-r">
+<a href="#Pagina3" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
 <h2>La Tierra que habitamos</h2>
 </a>
 </li>
 <li class="ui-first-child ui-last-child">
-<a href="#Pagina4" class="ui-btn-icon-right ui-icon-carat-r">
+<a href="#Pagina4" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
 <h2>Dialogo sobre armonia con la naturaleza</h2>
 </a>
 </li>
 <li class="ui-first-child ui-last-child">
-<a href="#Pagina5" class="ui-btn-icon-right ui-icon-carat-r">
+<a href="#Pagina5" class="ui-btn ui-btn-icon-right ui-icon-carat-r">
 <h2>Hacia una Tierra sostenible</h2>
 </a>
 </li>
